assets/css/style.css
/*---------------------------------------------Fonts*/

@font-face {
    font-family: 'blackpearl';
    src: url("../fonts/blackpearl.ttf") format("truetype");
}

body {
    background-image: url("../images/background.png");
    background-color: #907860;
    background-size: cover;
    font-family: 'Fondamento', cursive;
}

.title-container {
    background-image: url("../images/scroll.png");
    background-size: 100% auto;
    background-repeat: no-repeat;
    background-position: center;
    margin-top: 30px;
    height: 250px;
}

/*---------------------------------------------Text*/

h1 {
    font-family: 'blackpearl', 'Fondamento', cursive, sans-serif;
    padding: 50px 25px;
    margin-top: 40px;
    text-stroke: 1px #4A0B6E;
    -webkit-text-stroke: 1px #4A0B6E;

    /*The below code was obtained from 'fossheim.io' to apply the text colour gradient. */
    background-color: black;
    background-image: linear-gradient(red, yellow, red);
    background-size: contain;
    background-repeat: repeat;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-background-clip: text;
    -moz-text-fill-color: transparent;
}

h2 {
    font-size: 22px;
    font-weight: bold;
    text-align: center;
    padding-bottom: 10px;
}

h3 {
    font-size: 18px;
    font-weight: bold;
    text-align: center;
}

/*---------------------------------------------Lists*/

.list {
    list-style-type: none;
    padding-left: 0;
}

.bullet {
    display: inline-block;
    vertical-align: top;
    width: 20px;
}

.li-text {
    display: inline-block;
    width: calc(100% - 20px);
}

li {
    padding-top: 10px;
    padding-left: 0;
}

/*---------------------------------------------Game board*/

.game-board {
    display: grid;
    grid-template-columns: 1fr 1fr;
    border: 1px solid red;
    width: 75%;
    margin: 50px auto 100px;
}

#page1 {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    border: 1px solid blue;
    width: 85%;
    height: auto;
    grid-row: 1;
    grid-column: 1 / 1;
    z-index: 1;
    margin: 5% 8% 10% 7%;
}

#page2 {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    border: 1px solid blue;
    width: 85%;
    height: auto;
    grid-row: 1;
    grid-column: 2 / 2;
    z-index: 1;
    margin: 5% 5% 10% 10%;
}

.game-item {
    display: grid;
    align-items: center;
    justify-items: center;
    border: 1px solid green;
    width: auto;
    height: 100%;
}

/*---------------------------------------------Home page*/

#page1-test {
    position: relative;
    border: 1px solid blue;
    width: 95%;
    height: auto;
    grid-row: 1;
    grid-column: 1 / 1;
    z-index: 1;
    margin: 5% 8% 10% 5%;
}

.top-page1 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 80%;
    overflow-y: scroll;
}

.btm-page1 {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    width: 100%;
    height: 100%;
}

.top-page2 {
    display: flex;
    align-items: center;
    width: 100%;
    height: 80%;
}

.btm-page2 {
    display: flex;
    justify-content: space-evenly;
    align-items: flex-end;
    width: 100%;
    height: 20%;
}

#page2-test {
    border: 1px solid blue;
    width: 85%;
    height: auto;
    grid-row: 1;
    grid-column: 2 / 2;
    z-index: 1;
    margin: 5% 5% 10% 10%;
}

/*---------------------------------------------How to play page*/

#how-page1 {
    position: relative;
    border: 1px solid blue;
    width: 95%;
    height: auto;
    grid-row: 1;
    grid-column: 1 / 1;
    z-index: 1;
    margin: 5% 8% 10% 5%;
}

#how-page2 {
    position: relative;
    border: 1px solid blue;
    width: 89%;
    height: auto;
    grid-row: 1;
    grid-column: 2 / 2;
    z-index: 1;
    margin: 5% 5% 10% 8%;
}

.how-content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
}

/*---------------------------------------------Buttons*/

.button {
    border: 3px solid #4A0B6E;
    background-color: #5F4F98;
    color: #B0F23D;
    border-radius: 50px;
    padding: 5px;
    transition: color 0.1s ease-in-out;
}

.button:hover {
    background-color: #4A0B6E;
    color: #6fff48;
    border-color: #6fff48;
}

/*---------------------------------------------Images*/

#book {
    width: 100%;
    height: auto;
    grid-row: 1;
    grid-column: 1 / -1;
}

.card-back {
    height: auto;
    max-width: 80%;
    justify-self: center;
    align-self: center;
}

.hazel {
    height: auto;
    width: 100%;
}

/*---------------------------------------------Scrollbar*/

::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

::-webkit-scrollbar-track {
    background: #5F4F98;;
    border-radius: 5px;
    box-shadow: inset 0 0 7px #1b1b1b;
}

::-webkit-scrollbar-thumb {
    background: #B0F23D;;
    border-radius: 5px;
    box-shadow: inset 0 0 7px #1b1b1b;
}

::-webkit-scrollbar-thumb:hover {
    background: #7AC700;
    box-shadow: inset 0 0 7px #1b1b1b;
}

/*---------------------------------------------Footer*/

.cauldron {
    background-color: #404040;
    height: 250px;
    width: 100%;
    position: relative;
}

.rim-shadow {
    background-color: #1b1b1b;
    height: 15px;
    width: 100%;
    position: absolute;
    top: 50px;
}

#slime {
    width: 100%;
    height: auto;
    max-height: 150px;
    position: absolute;
    top: -50px;
}

